# semantic-scholar-skills

./: README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: live-smoke.yml
scripts/: bundle_skills.py  check_bundle_drift.py
skills/expand-references/: SKILL.md  examples.md  reference.md
skills/expand-references/scripts/: run.py
skills/expand-references/scripts/_shared/: launcher.py
skills/expand-references/scripts/_vendor/semantic_scholar_skills/core/: __init__.py
skills/expand-references/scripts/_vendor/semantic_scholar_skills/engine/: __init__.py  paper_triage.py  resolve.py
skills/paper-triage/: SKILL.md  examples.md  reference.md
skills/paper-triage/scripts/: run.py
skills/paper-triage/scripts/_vendor/semantic_scholar_skills/core/: requests.py
skills/paper-triage/scripts/_vendor/semantic_scholar_skills/engine/: trace_citations.py
skills/paper-triage/scripts/_vendor/semantic_scholar_skills/standalone/: entrypoint.py
skills/trace-citations/: SKILL.md  examples.md  output_contract.md  reference.md
skills/trace-citations/scripts/: run.py
skills/trace-citations/scripts/_vendor/semantic_scholar_skills/: config.py
skills/trace-citations/scripts/_vendor/semantic_scholar_skills/engine/: expand_references.py  resolve.py  scoring.py
skills/trace-citations/scripts/_vendor/semantic_scholar_skills/standalone/: transport_stdlib.py
src/semantic_scholar_skills/: __init__.py
src/semantic_scholar_skills/core/: __init__.py  client.py  exceptions.py  requests.py  transport.py
src/semantic_scholar_skills/engine/: expand_references.py  models.py  paper_triage.py  resolve.py  trace_citations.py
src/semantic_scholar_skills/mcp/: __init__.py  bridge.py  server.py  tools_authors.py  tools_papers.py  tools_recommendations.py
src/semantic_scholar_skills/standalone/: __init__.py  transport_stdlib.py
tests/: conftest.py  test_project_metadata.py
tests/contract/: conftest.py  test_authors_contract.py  test_bridge_contract.py  test_papers_contract.py  test_recommendations_contract.py
tests/core/: test_author_requests.py  test_client.py  test_paper_requests.py  test_rate_limiter.py  test_recommendation_requests.py  test_transport.py
tests/engine/: conftest.py  test_expand_references.py  test_models.py  test_paper_triage.py  test_resolve.py  test_scoring.py  test_trace_citations.py
tests/live/: conftest.py  test_live_expand_references.py  test_live_paper_triage.py  test_live_resolve.py  test_live_trace_citations.py
tests/mcp/: test_server.py
tests/skills/: test_bundle.py  test_skill_smoke.py  test_vendored_import.py
tests/standalone/: test_entrypoint.py  test_transport_stdlib.py
