[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-scholar-skills"
version = "0.1.0"
description = "Semantic Scholar research workflows, standalone runtime, and MCP/HTTP interfaces."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Yuzongmin Yu" },
]
keywords = [
  "semantic-scholar",
  "mcp",
  "research-workflows",
  "citation-analysis",
  "claude-skills",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.24.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
mcp = [
  "fastmcp>=2.0.0,<3.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
]
test = [
  "fastmcp>=2.0.0,<3.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pytest>=7.3.1",
  "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/zongmin-yu/semantic-scholar-skills"
Repository = "https://github.com/zongmin-yu/semantic-scholar-skills"
Issues = "https://github.com/zongmin-yu/semantic-scholar-skills/issues"
Changelog = "https://github.com/zongmin-yu/semantic-scholar-skills/blob/main/CHANGELOG.md"

[project.scripts]
semantic-scholar-skills-mcp = "semantic_scholar_skills.mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: calls the real Semantic Scholar API",
]
asyncio_mode = "auto"
